components/15-ollama/ollama-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 11434
  selector:
    deployment: ollama
  type: ClusterIP
